--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>Topo Chico Hard Seltzers in a Glass Bottle Near Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
     <style>
         body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-x: hidden;
             background: white;
             font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
@@ -20,6 +21,7 @@
             color: #ff0000;
             font-family: 'Lobster', cursive;
             font-size: 36px;
+            margin: 0 15px 20px;
         }
         button {
             padding: 20px 40px;
@@ -33,6 +35,8 @@
             z-index: 10;
             animation: blink 1s infinite;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            max-width: 90%;
+            word-break: keep-all;
         }
         @keyframes blink {
             0%, 50%, 100% { opacity: 1; }
@@ -40,47 +44,29 @@
         }
         .topo {
             position: absolute;
-            width: 50px;
+            width: 40px;
             height: auto;
             animation: fall linear infinite;
+            user-select: none;
+            pointer-events: none;
         }
         @keyframes fall {
             0% { transform: translateY(-100px) rotate(0deg); }
-            100% { transform: translateY(100vh) rotate(360deg); }
+            100% { transform: translateY(110vh) rotate(360deg); }
         }
-        /* Cursed sketchy ad styling */
-        .sketchy-ad {
-            margin: 30px auto;
-            padding: 15px;
-            width: 320px;
-            background: linear-gradient(135deg, #ff0000, #ffff00);
-            color: #000;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            font-size: 16px;
-            border: 4px dotted lime;
-            border-radius: 10px;
-            box-shadow: 0 0 25px red, 0 0 15px yellow;
-            text-align: center;
-            position: relative;
-            z-index: 10;
-            animation: shake 0.5s infinite;
-        }
-        @keyframes shake {
-            0% { transform: rotate(0deg); }
-            25% { transform: rotate(1deg); }
-            50% { transform: rotate(0deg); }
-            75% { transform: rotate(-1deg); }
-            100% { transform: rotate(0deg); }
-        }
-        .sketchy-ad .alert {
-            color: red;
-            font-size: 18px;
-            font-weight: bold;
-            animation: blinkText 0.7s infinite;
-        }
-        @keyframes blinkText {
-            0%, 100% { color: red; }
-            50% { color: yellow; }
+        /* Responsive tweaks */
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 28px;
+                padding-top: 30px;
+            }
+            button {
+                font-size: 18px;
+                padding: 15px 25px;
+            }
+            .topo {
+                width: 30px;
+            }
         }
     </style>
 </head>
@@ -89,8 +75,6 @@
     <button onclick="goToThePage()">Locate TCHSIAGB</button>
 
     <script>
-        const SHOW_SKETCHY_AD = false; // <-- Toggle the ad ON (true) or OFF (false)
-
         function goToThePage() {
             if (navigator.geolocation) {
                 navigator.geolocation.getCurrentPosition(function(position) {
@@ -108,40 +92,15 @@
             }
         }
 
-        // Create raining Topo Chico bottles properly from the top
+        // Create raining Topo Chico bottles from the top
         for(let i = 0; i < 30; i++) {
             let img = document.createElement('img');
-            img.src = 'topo.png'; // Make sure this image file exists in your project folder
+            img.src = 'topo.png'; // Ensure 'topo.png' exists in your folder
             img.className = 'topo';
             img.style.left = Math.random() * window.innerWidth + 'px';
-            img.style.top = '-100px'; // Start just off the top of the screen
-            img.style.animationDuration = (5 + Math.random() * 5) + 's'; // random fall speed
-            img.style.position = 'absolute';
+            img.style.top = '-100px'; // Start off the top of the screen
+            img.style.animationDuration = (5 + Math.random() * 5) + 's'; // Random fall speed
             document.body.appendChild(img);
-        }
-
-        if (SHOW_SKETCHY_AD) {
-            const adDiv = document.createElement('div');
-            adDiv.className = 'sketchy-ad';
-            adDiv.innerHTML = `
-              <div class="alert">🚨 ALERT! LIMITED STOCK DETECTED!! 🚨</div>
-              <p><strong>Congratulations!!!</strong><br> You May Have Been Selected For EXCLUSIVE Topo Chico Bottle Offer 🤯🍓</p>
-              <p style="color: blue; font-size: 14px;">(1) Lucky User in your Area - Don't Miss!!</p>
-              <a href="https://www.topochicohard.com/hard-seltzer/glass-bottles/strawberry-guava" target="_blank" style="
-                  text-decoration: none;
-                  color: #fff;
-                  display: inline-block;
-                  padding: 10px 15px;
-                  background: red;
-                  border: 3px solid yellow;
-                  border-radius: 5px;
-                  margin-top: 10px;
-                  box-shadow: 0 0 10px yellow;
-                  font-size: 16px;
-              ">👉 CLAIM NOW 👈</a>
-              <p style="font-size: 10px; color: #333;">*May contain real bottles. Not a scam. Probably.</p>
-            `;
-            document.body.appendChild(adDiv);
         }
     </script>
 </body>
