--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
             padding: 20px 40px;
             font-size: 20px;
             background-color: #FFD400;
-            color: #0C5C38;
-            border: 3px solid #0C5C38;
-            border-radius: 12px;
+            color: #0C5C38; /* Topo Chico dark green */
+            border: 4px solid #0C5C38;
+            border-radius: 25px; /* Ribbon loop style */
             cursor: pointer;
             position: relative;
             z-index: 10;
             animation: blink 1s infinite;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            box-shadow:
+                inset 0 0 10px #FFD400, /* inner glow for soft ribbon feel */
+                0 0 0 4px #0C5C38, /* thick outer border */
+                0 8px 15px rgba(0,0,0,0.4); /* drop shadow for lift effect */
             max-width: 90%;
+            font-family: 'Lobster', cursive;
         }
         @keyframes blink {
             0%, 50%, 100% { opacity: 1; }
@@ -44,17 +48,17 @@
         }
         .topo-wrapper {
             position: absolute;
-            width: 80px; /* bigger hit area */
+            width: 80px; /* big hitbox */
             height: 80px;
+            animation: fall linear infinite;
             pointer-events: auto;
         }
         .topo {
             position: absolute;
             width: 40px;
             height: auto;
-            left: 20px; /* center inside wrapper */
+            left: 20px;
             top: 20px;
-            animation: fall linear infinite;
             user-select: none;
             cursor: pointer;
         }
@@ -74,7 +78,7 @@
             width: 50px;
             height: auto;
             opacity: 0.3;
-            pointer-events: none; /* doesn't block clicks */
+            pointer-events: none;
             z-index: 1;
         }
         @media (max-width: 480px) {
@@ -110,27 +114,25 @@
         for(let i = 0; i < 30; i++) {
             let wrapper = document.createElement('div');
             wrapper.className = 'topo-wrapper';
-            wrapper.style.left = Math.random() * window.innerWidth + 'px';
-            wrapper.style.top = '-100px';
+            wrapper.style.left = Math.random() * (window.innerWidth - 80) + 'px';
             wrapper.style.animationDuration = (5 + Math.random() * 5) + 's';
 
             let img = document.createElement('img');
-            img.src = 'topo.png'; // bottle image
+            img.src = 'topo.png'; // replace with your bottle image
             img.className = 'topo';
 
-            // Click to pop and leave smashed glass behind
             img.addEventListener('click', function(e) {
                 this.classList.add('pop');
 
-                // Create smashed glass at this location
                 let smashed = document.createElement('img');
-                smashed.src = 'smashed.png'; // Your smashed glass image
+                smashed.src = 'smashed.png'; // replace with your smashed image
                 smashed.className = 'smashed';
+
                 smashed.style.left = wrapper.style.left;
-                smashed.style.top = (parseFloat(wrapper.style.top) + 60) + 'px'; // adjust lower
+                smashed.style.top = (parseFloat(window.scrollY) + parseFloat(wrapper.getBoundingClientRect().top) + 40) + 'px';
+
                 document.body.appendChild(smashed);
 
-                // Remove the bottle after popping
                 setTimeout(() => wrapper.remove(), 500);
             });
 
